2007-08-28  Derek Price  <derek@ximbiot.com>

	* logmsg.c (do_editor): Improve header block comment.  Honor new
	FirstVerifyLogErrorFatal option.
	* parseinfo.c (new_config): Initialize new FirstVerifyLogErrorFatal
	option.
	(parse_config): Parse new FirstVerifyLogErrorFatal option.
	* parseinfo.h (struct config): Declare storage for new option.
	* sanity.sh (info-v*): Compensate for and test changes.

2007-08-27  Derek Price  <derek@ximbiot.com>

	* commit.c (commit_fileproc): Move the do_editor & do_verify calls...
	(commit_direntproc): ...from these two locations...
	(check_filesdoneproc): ...to here.
	* cvs.h [LOGMSG_REREAD_NEVER, LOGMSG_REREAD_ALWAYS,
	LOGMSG_REREAD_STAT]: Move these definitions...
	(do_verify): ...and this prototype...
	* logmsg.h: ...to identically named entities here.
	* import.c (import): Check for errors returned by do_verify.
	* logmsg.c (do_verify): Return errors.
	* parseinfo.c: Include logmsg.h.
	* sanity.sh (info-v*): Compensate for changes.

2007-08-26  Derek Price  <derek@ximbiot.com>

	* mkmodules.c (in_root): Rename to...
	(in_repository): ...this.

	* base.c, client.c, commit.c, cvsrc.c, edit.c, entries.c, fileattr.c,
	ignore.c, login.c, logmsg.c, mkmodules.c, myndbm.c, parseinfo.c,
	patch.c, release.c, repos.c, root.c, server.c, subr.c, update.c,
	wrapper.c: Remove obsolete includes of GNULIB's "getline.h" &
	"getdelim.h".

2007-08-26  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (in_root, init): Unmix declarations and code.

2007-08-24  Derek Price  <derek@ximbiot.com>

	Simplify code using new GNULIB modules.
	* add.c (add_directory), base.c (base_checkout), checkin.c (Checkin),
	checkout.c (emptydir_name, build_dirs_and_chdir), client.c
	(call_in_directory, update_entries), commit.c (checkaddfile),
	create_adm.c (Create_Admin), edit.c (edit_file, edit_fileproc),
	fileattr.c (fileattr_write), import.c (import, process_import_file,
	import_descend_dir), lock.c (lock_name), ls.c (ls_direntproc),